force-app/main/default/objects/Lead/fields/abm_buyingStage__c.field-meta.xml
<CustomField>
    <fullName>abm_buyingStage__c</fullName>
    <label>abm_buyingStage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>