force-app/main/default/objects/Lead/fields/abm_engagment__c.field-meta.xml
<CustomField>
    <fullName>abm_engagment__c</fullName>
    <label>abm_engagment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>