force-app/main/default/objects/Lead/fields/abm_grade__c.field-meta.xml
<CustomField>
    <fullName>abm_grade__c</fullName>
    <label>abm_grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>