force-app/main/default/objects/Lead/fields/abm_intentScore__c.field-meta.xml
<CustomField>
    <fullName>abm_intentScore__c</fullName>
    <label>abm_intentScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>