force-app/main/default/objects/Lead/fields/abm_profileFit__c.field-meta.xml
<CustomField>
    <fullName>abm_profileFit__c</fullName>
    <label>abm_profileFit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>