force-app/main/default/objects/Lead/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>This field is used when the customer is a dealer, distributor or supplier and we want to know what they sell.</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Retail/Etail</fullName>
            </value>
            <value>
                <fullName>Marketing Partners</fullName>
            </value>
            <value>
                <fullName>Software Partners</fullName>
            </value>
            <value>
                <fullName>Technology Partners</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>NSP</fullName>
            </value>
            <value>
                <fullName>VAR - Latin America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>