force-app/main/default/objects/Lead/fields/Area_of_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Responsibility__c</fullName>
    <description>This is the department or area this contact works in.</description>
    <label>Area of Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>AV Mgt</fullName>
            </value>
            <value>
                <fullName>Beverage Management</fullName>
            </value>
            <value>
                <fullName>Corp. Management</fullName>
            </value>
            <value>
                <fullName>Culinary Chef</fullName>
            </value>
            <value>
                <fullName>Design / Construction</fullName>
            </value>
            <value>
                <fullName>Development/Real Est</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Exec/Mgt</fullName>
            </value>
            <value>
                <fullName>FOH Management</fullName>
            </value>
            <value>
                <fullName>Franchisor/Franchisee</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>In-House Prod</fullName>
            </value>
            <value>
                <fullName>Install/ServTech</fullName>
            </value>
            <value>
                <fullName>International Operations</fullName>
            </value>
            <value>
                <fullName>MIS/IT</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Rental/Staging Tech</fullName>
            </value>
            <value>
                <fullName>Sales / Marketing</fullName>
            </value>
            <value>
                <fullName>Syst Des/Engineer</fullName>
            </value>
            <value>
                <fullName>Syst Install Mgt</fullName>
            </value>
            <value>
                <fullName>Technical/Eng</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>