force-app/main/default/objects/Lead/fields/AV_Program_Interest__c.field-meta.xml
<CustomField>
    <fullName>AV_Program_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AV Program Interest</label>
    <type>Checkbox</type>
</CustomField>