force-app/main/default/objects/Lead/fields/Best_Time_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Call__c</fullName>
    <label>Best Time to Call</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8:00AM</fullName>
            </value>
            <value>
                <fullName>10:00AM</fullName>
            </value>
            <value>
                <fullName>12:00PM</fullName>
            </value>
            <value>
                <fullName>2:00PM</fullName>
            </value>
            <value>
                <fullName>4:00PM</fullName>
            </value>
            <value>
                <fullName>6:00PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>