force-app/main/default/objects/Lead/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Spoke to Contact</fullName>
            </value>
            <value>
                <fullName>Bad Phone Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>