force-app/main/default/objects/Lead/fields/Calls_Made__c.field-meta.xml
<CustomField>
    <fullName>Calls_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calls Made</label>
    <type>Checkbox</type>
</CustomField>