force-app/main/default/objects/Lead/fields/Comments_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Comments_Feedback__c</fullName>
    <label>Comments/Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>