force-app/main/default/objects/Lead/fields/Digital_Signage__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Signage</label>
    <type>Checkbox</type>
</CustomField>