force-app/main/default/objects/Lead/fields/Government_GSA__c.field-meta.xml
<CustomField>
    <fullName>Government_GSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this contact / account have a government service agreement?</description>
    <label>Government (GSA)</label>
    <type>Checkbox</type>
</CustomField>