force-app/main/default/objects/Lead/fields/GovSpend_Account_City__c.field-meta.xml
<CustomField>
    <fullName>GovSpend_Account_City__c</fullName>
    <label>GovSpend Account City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>