force-app/main/default/objects/Lead/fields/GovSpend_Account_County__c.field-meta.xml
<CustomField>
    <fullName>GovSpend_Account_County__c</fullName>
    <label>GovSpend Account County</label>
    <length>200</length>
    <type>Text</type>
</CustomField>