force-app/main/default/objects/Lead/fields/GovSpend_ID__c.field-meta.xml
<CustomField>
    <fullName>GovSpend_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique GovSpend ID used for upsert from GovSpend.</description>
    <externalId>true</externalId>
    <label>GovSpend ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>