force-app/main/default/objects/Lead/fields/Latest_Sales_Rep_Activity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Sales_Rep_Activity__c</fullName>
    <label>Latest Sales Rep Activity</label>
    <type>Date</type>
</CustomField>