force-app/main/default/objects/Lead/fields/Lead_Created_Month__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Month__c</fullName>
    <description>Used to make last 30 days YoY reporting easier to manage
CreatedDate + 395 &gt; now() &amp;&amp;</description>
    <formula>if(CreatedDate + 30 &gt; now(),true,
if(now() - 365 &gt; CreatedDate &amp;&amp; now() - 395 &lt; CreatedDate,true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Month</label>
    <type>Checkbox</type>
</CustomField>