force-app/main/default/objects/Lead/fields/Lead_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Name__c</fullName>
    <description>Name of the event which the lead was derived from.</description>
    <inlineHelpText>Name of the event which the lead was derived from.</inlineHelpText>
    <label>Lead Source Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canada Top 100</fullName>
            </value>
            <value>
                <fullName>DSE - 2012</fullName>
            </value>
            <value>
                <fullName>FETC</fullName>
            </value>
            <value>
                <fullName>Finch Club</fullName>
            </value>
            <value>
                <fullName>InfoComm 2012</fullName>
            </value>
            <value>
                <fullName>NRA 2012</fullName>
            </value>
            <value>
                <fullName>TAA Campaign</fullName>
            </value>
            <value>
                <fullName>ViewPad 10pi - IDG Email A - Form</fullName>
            </value>
            <value>
                <fullName>Viewpad 10pi - IDG Email B - Button</fullName>
            </value>
            <value>
                <fullName>ViewPad 10pi - VS Email A - Form</fullName>
            </value>
            <value>
                <fullName>ViewPad 10pi - VS Email B - Button</fullName>
            </value>
            <value>
                <fullName>FETC 2016</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>