force-app/main/default/objects/Lead/fields/Level_in_Organization__c.field-meta.xml
<CustomField>
    <fullName>Level_in_Organization__c</fullName>
    <description>What level within the company is this contact at?</description>
    <label>Level in Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Exec/Sr VP</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Owner/C-level</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales - Top Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>