force-app/main/default/objects/Lead/fields/LFD__c.field-meta.xml
<CustomField>
    <fullName>LFD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LFD</label>
    <type>Checkbox</type>
</CustomField>