force-app/main/default/objects/Lead/fields/Log_Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Log_Customer_Request__c</fullName>
    <label>Log Customer Request</label>
    <type>TextArea</type>
</CustomField>