force-app/main/default/objects/Lead/fields/massUpdateTag__c.field-meta.xml
<CustomField>
    <fullName>massUpdateTag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>massUpdateTag</label>
    <type>Checkbox</type>
</CustomField>