force-app/main/default/objects/Lead/fields/Monitors__c.field-meta.xml
<CustomField>
    <fullName>Monitors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitors</label>
    <type>Checkbox</type>
</CustomField>