force-app/main/default/objects/Lead/fields/Number_of__c.field-meta.xml
<CustomField>
    <fullName>Number_of__c</fullName>
    <description>This is the number of stores they work with, the number of rooms in the hotel or number of units they work with.</description>
    <label>Number of Rooms / Units / Stores / Beds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2 to 9</fullName>
            </value>
            <value>
                <fullName>10 to 49</fullName>
            </value>
            <value>
                <fullName>50 to 150</fullName>
            </value>
            <value>
                <fullName>Over 150</fullName>
            </value>
            <value>
                <fullName>Over 400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>