force-app/main/default/objects/Lead/fields/Number_of_Employees_doctors_staff__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_doctors_staff__c</fullName>
    <label>Number of Employees/doctors/staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>