force-app/main/default/objects/Lead/fields/PardotEmail__c.field-meta.xml
<CustomField>
    <fullName>PardotEmail__c</fullName>
    <label>PardotEmail</label>
    <type>Email</type>
</CustomField>