force-app/main/default/objects/Lead/fields/PardotTestEmail__c.field-meta.xml
<CustomField>
    <fullName>PardotTestEmail__c</fullName>
    <label>PardotTestEmail</label>
    <type>Email</type>
</CustomField>