force-app/main/default/objects/Lead/fields/PardotTextEmail__c.field-meta.xml
<CustomField>
    <fullName>PardotTextEmail__c</fullName>
    <label>PardotTextEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>