force-app/main/default/objects/Lead/fields/PardotTextTestEmail__c.field-meta.xml
<CustomField>
    <fullName>PardotTextTestEmail__c</fullName>
    <label>PardotTextTestEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>