force-app/main/default/objects/Lead/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <length>200</length>
    <type>Text</type>
</CustomField>