force-app/main/default/objects/Lead/fields/pp_incomplete_Registration__c.field-meta.xml
<CustomField>
    <fullName>pp_incomplete_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>pp_incomplete Registration</label>
    <type>Checkbox</type>
</CustomField>