force-app/main/default/objects/Lead/fields/pp_NewRegistrations__c.field-meta.xml
<CustomField>
    <fullName>pp_NewRegistrations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>pp_NewRegistrations</label>
    <referenceTo>pp_NewRegistrations__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>