force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Product interest for leads coming into system</description>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smart Displays</fullName>
            </value>
            <value>
                <fullName>Touch Displays</fullName>
            </value>
            <value>
                <fullName>Digital Signage</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Desktop Virtualization</fullName>
            </value>
            <value>
                <fullName>Projectors</fullName>
            </value>
            <value>
                <fullName>Monitors</fullName>
            </value>
            <value>
                <fullName>ViewBoard</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Home Office</fullName>
            </value>
            <value>
                <fullName>Home Theater</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>