force-app/main/default/objects/Lead/fields/Projectors__c.field-meta.xml
<CustomField>
    <fullName>Projectors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Projectors</label>
    <type>Checkbox</type>
</CustomField>