force-app/main/default/objects/Lead/fields/Prospect_Intel__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Intel__c</fullName>
    <description>What notes or details do we need to know about this prospect to help us.</description>
    <label>Prospect Intel</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>