force-app/main/default/objects/Lead/fields/Purchas__c.field-meta.xml
<CustomField>
    <fullName>Purchas__c</fullName>
    <description>This field indicates this contacts ability to make or influence a buying decision.</description>
    <label>Purchasing Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorize</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Recommend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>