force-app/main/default/objects/Lead/fields/Sales_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Sales_Purchases__c</fullName>
    <label>Sales / Purchases</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under $100,000</fullName>
            </value>
            <value>
                <fullName>$100,000 to $499,999</fullName>
            </value>
            <value>
                <fullName>$500,000 to $1,499,999</fullName>
            </value>
            <value>
                <fullName>1,500,000 to 4,999,999</fullName>
            </value>
            <value>
                <fullName>5,000,000 to 24,999,999</fullName>
            </value>
            <value>
                <fullName>Over $25,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>