force-app/main/default/objects/Lead/fields/sansancard__SSCardText__c.field-meta.xml
<CustomField>
    <fullName>sansancard__SSCardText__c</fullName>
    <label>SSCardText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>