force-app/main/default/objects/Lead/fields/Transfer_Ownership_Create_Task__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Ownership_Create_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Ownership Create Task</label>
    <type>Checkbox</type>
</CustomField>