force-app/main/default/objects/Lead/recordTypes/VSEI_Lead.recordType-meta.xml
<RecordType>
    <fullName>VSEI_Lead</fullName>
    <active>true</active>
    <businessProcess>Standard Process</businessProcess>
    <description>Leads Originated from ViewSonic Europe and ViewSonic International</description>
    <label>VSEI Lead</label>
</RecordType>