force-app/main/default/objects/Lead/listViews/AL_Leads.listView-meta.xml
<ListView>
    <fullName>AL_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <filterScope>Mine</filterScope>
    <label>A1 - All My Leads</label>
</ListView>