force-app/main/default/objects/Lead/listViews/My_Queue_Leads.listView-meta.xml
<ListView>
    <fullName>My_Queue_Leads</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>All VSE</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>All VSI</value>
    </filters>
    <label>My Queue Leads</label>
    <sharedTo>
        <group>All_VSE</group>
        <group>All_VSI</group>
    </sharedTo>
</ListView>