force-app/main/default/objects/Lead/listViews/MyUnreadLeads.listView-meta.xml
<ListView>
    <fullName>MyUnreadLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2014 12:00 AM</value>
    </filters>
    <label>A2 - My Unread Leads</label>
    <language>en_US</language>
</ListView>