force-app/main/default/objects/Lead/listViews/UVS_VSA_Lead.listView-meta.xml
<ListView>
    <fullName>UVS_VSA_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>UVS VSA</label>
    <queue>UVS_VSA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>