force-app/main/default/objects/Lead/listViews/UVS_VSE_Lead.listView-meta.xml
<ListView>
    <fullName>UVS_VSE_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>UVS VSE</label>
    <queue>UVS_VSE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>