force-app/main/default/objects/Lead/listViews/UVS_VSI_Lead.listView-meta.xml
<ListView>
    <fullName>UVS_VSI_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>UVS VSI</label>
    <queue>UVS_VSI</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>